resources/style/index.css
html { user-select: none; }

body {
  overflow: hidden;
  height: 85vh;
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
}

.darken {
  filter: brightness(0.6);
}

.boldTitle {
  font-weight: bold;
  font-size: 1.2em;
  margin-bottom: 6px;
}

#firstTimeBtns {
  display: flex;
  justify-content: center;
  align-items: center;
}

#firstTimeBtns button {
  margin: 10px;
}

#firstTimeNotice span {
  display: block;
  text-align: center;
  margin-bottom: 6px;
}

#firstTimeNotice,
#settingsPanel {
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  margin-right: -50%;
  z-index: 99;
  padding: 20px;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #141414;
  font-family: system-ui;
}

#settingsPanel {
  width: 35%;
  height: 80%;
  overflow: hidden;
}

#fullSettingsTitle {
  font-size: 1.5em;
  font-weight: bold;
  margin-bottom: 10px;
}

#settingsPanelInner {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 10px 10%;
}

.settingsRow {
  width: 100%;
}

.settingTitle {
  font-size: 1.2em;
  font-weight: bold;
  margin-bottom: 10px;
}

.settingLabel {
  display:inline-block;
  font-size: 1em;
  font-weight: normal;
  margin: 10px 0px;
}

.settingSubtitle {
  color: rgb(165, 165, 165);
  font-size: 0.8em;
  font-weight: normal;
}

.settingSection {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.settingSection .smolBtn {
  height: 30px;
}

#settingsTitleBar {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

#settingsClose {
  display: inline-block;
  transition: filter 0.1s ease-in-out;
}

#settingsClose img {
  height: 20px;
}

#settingsClose:hover {
  filter: invert(85%) sepia(31%) saturate(560%) hue-rotate(329deg) brightness(100%) contrast(92%);
  cursor: pointer;
}

#ipList {
  position: absolute;
  z-index: 99;
  padding: 10px;
  transform: translate(150px, 420px);
  background-color: #fff;
  border-radius: 5px;
  border: 1px solid #ccc;
  width: 200px;
}

#ipList ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
}

#ipList li {
  padding: 4px;
  border-bottom: 1px solid #ccc;
}

#ipList li:hover {
  color: #ffc61e;
  cursor: pointer;
}

#ipList li:last-child {
  border-bottom: none;
}

#controlBar {
  display: flex;
  flex-direction: row;
  align-items: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 34px;
  background-color: #141414;
  z-index: 1;
}

#controlBar div {
  color: #c3c3c3;
  width: 20px;
  height: 80%;
  vertical-align: middle;
  text-align: center;
  padding: 0px 6px;
  margin: 0px 2px;
  padding-top: 6px;
}

#controlBar div:hover {
  cursor: pointer;
  background-color: #353535;
}

#titleSection {
  color: white;
  padding-left: 8px;
}

#version {
  display: inline-block;
  color: #434343;
}

#controlBar div img {
  /* https://codepen.io/sosuke/pen/Pjoqqp */
  filter: invert(95%) sepia(0%) saturate(18%) hue-rotate(153deg) brightness(88%) contrast(81%);
  height: 60%;
  vertical-align: middle;
}

#closeBtn:hover {
  background-color: #ff0000 !important;
}

#closeBtn:hover img {
  filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(142deg) brightness(107%) contrast(101%);
}

#titleSection {
  /* Move all components to the right since this is the first button */
  margin-right: auto !important;
}

.playBtn:hover, .smolBtn:hover {
  cursor: pointer;
}

.altBtn {
  background: none;
  color: #525252;
  text-decoration: underline;
  border: none;
  line-height: 2px;

  transition: color 0.05s ease-in-out;
}

.altBtn:hover {
  cursor: pointer;
  color: #ffd326;
}

.playBtn {
  padding: 0 30px;
  border-radius: 5px;
  border: none;
  background: linear-gradient(#ffd326, #ffc61e);
  color: #704a1d;
  font-weight: bold;
  height: 50px;
  font-size: 20px;
}

.playBtn:hover {
  background: linear-gradient(#ffc61e, #ffd326);
}

.playBtn.disabled,
.smolBtn.disabled {
  background: linear-gradient(#9c9c9c, #949494);
  color: rgb(226, 226, 226);
  cursor: default;
}

.smolBtn.disabled:hover {
  background: linear-gradient(#949494, #9c9c9c);
}

.smolBtn {
  padding: 0 20px;
  border-radius: 5px;
  border: none;
  background: linear-gradient(#ffd326, #ffc61e);
  color: #704a1d;
  font-weight: bold;
  height: 40px;
  font-size: 14px;
}

.smolBtn:hover {
  background: linear-gradient(#ffc61e, #ffd326);
}

#bottomBar {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 100%;
  padding: 20px 0px;
  background: #141414;
}

.bottomSection {
  display: flex;
  flex-direction: row;
  height: 100%;
  width: 100%;
  background: #141414;
  justify-content: space-evenly;
}

.bottomSection div {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background: #141414;
  margin: 4px;
  height: 10%;
}

#gamePath, #serverPath {
  color: white;
  font-size: 14px;
}

#panelContainer {
  width: 100%;
  height: 100%;
  position: relative;
  overflow: hidden;
  display: flex;
}

#firstPanel, #secondPanel, #thirdPanel {
  display: flex;
  justify-content: center;
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;

  transition: width 0.2s ease-in-out, filter 0.2s ease-in-out;
}

#firstPanel:hover, #secondPanel:hover, #thirdPanel:hover {
  width: calc(100% + 150px);
}

#firstPanel, #secondPanel {
  border-right: 6px solid #141414;
}

#firstPanel {
  background-position: -200px;
}

/* Move the first official button to the position on the png */
#firstPanel button, #secondPanel button, #thirdPanel button {
  display: block;
  /* transform: translate(140px, 500px); */
  width: 300px;
  height: 60px;
}

#ip {
  display: block;
}

#port {
  width: 12%;
}

#secondPanel input {
  margin-bottom: 4px;
  height: 20px;
  background: white;
  border: none;
  border-bottom: 2px solid #4d4d4d;
  padding: 8px;

  /* border bottom anim */
  transition: border-bottom 0.1s ease-in-out;
}

#secondPanel input:focus {
  outline: none;
  border-bottom: 2px solid #ffc61e;
}

/* Move the second private button the near-bottom */
#secondControlContainer {
  position: relative;
  /* transform: translate(115px, 456px); */
  width: 300px;
  height: 60px;
  margin-top: calc(68vh - 40px) !important;
}

#secondControlContainer, #firstPanel button, #thirdPanel button {
  margin-top: 68vh;
}

#serverInput input, #serverInput img{
  display: inline-block;
}

#serverInput img {
  height: 20px;
  vertical-align: middle;
  margin-right: 4px;
}

#serverInput img:hover {
  cursor: pointer;
}

